--- a/src/assets/css/stylee1.css
+++ b/src/assets/css/stylee1.css
@@ -16,7 +16,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('../public/a25.jpeg') no-repeat center center/cover;
+    background: url('https://ik.imagekit.io/x59vn03uu/ToyStore/a1.jpg') no-repeat center center/cover;
     animation: backgroundAnimation 15s infinite alternate;
 }
 
