--- a/src/assets/css/SignUp.css
+++ b/src/assets/css/SignUp.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('/a25.jpeg') no-repeat;
+    background: url('https://ik.imagekit.io/x59vn03uu/ToyStore/a1.jpg') no-repeat;
     background-size: cover;
     background-position: center center;
   }
