--- a/src/assets/css/SignUp.css
+++ b/src/assets/css/SignUp.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('https://ik.imagekit.io/x59vn03uu/ToyStore/image.webp?updatedAt=1732008894035') no-repeat;
+    background: url('https://ik.imagekit.io/x59vn03uu/ToyStore/a25.jpeg?updatedAt=1732008890761') no-repeat;
     background-size: cover;
     background-position: center center;
   }
